# Unbind-AI

./: .gitignore  README.md
.github/workflows/: publish-github.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  database.py  main.py  schemas.py
backend/app/routes/: analysis_routes.py  auth_routes.py  lawyer_registration_routes.py  lawyer_routes.py  plan_routes.py
backend/app/services/: analysis_service.py  email_service.py  groq_service.py  model_selector.py  negotiation_service.py  ocr_service.py  pdf_processing.py  plan_service.py
backend/tests/: conftest.py  test_ocr.py  test_payments.py
cli/: package-lock.json  package.json
cli/src/: api.js  auth.js  config.js  display.js  index.js  repl.js
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: types.ts
frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx  providers.tsx
frontend/src/components/: AnalysisDisplay.tsx  CompareDocumentsModal.tsx  ConfirmModal.tsx  DashboardView.tsx  DocumentView.tsx  ExportButton.tsx  FileUpload.tsx  Header.tsx  HowItWorksFlow.tsx  Icons.tsx  ImpactSimulatorView.tsx  KeyDatesView.tsx  KeyTermsView.tsx  LandingPage.tsx  NegotiationHelperView.tsx  OverlayRephrasedPdf.tsx  ProfileView.tsx  RiskAnalysisView.tsx  ScreenshotFrame.tsx  Toast.tsx  footer.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useMediaQuery.ts  useScrollJack.ts  useScrollProgress.ts
frontend/src/lib/: diffDocument.ts  formatMoney.test.ts  formatMoney.ts  razorpay.ts
frontend/src/services/: api.ts
(+10 files in other folders)
