[project]
name = "unbind-ai-backend"
version = "0.1.0"
description = "FastAPI backend for UnbindAI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    "motor>=3.3.0",
    "httpx>=0.27.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-groq>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "langsmith>=0.1.0",
    "huggingface_hub>=0.23.0",
    "chromadb>=0.5.0",
    "posthog>=2.4.0,<3.0",
    "pdfplumber>=0.10.0",
    "PyPDF2>=3.0.0",
    "python-multipart",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "venv"]

[tool.ruff.lint]
# pycodestyle errors/warnings, pyflakes, isort, pyupgrade, flake8-bugbear
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "B008",  # FastAPI relies on function-call defaults (File(...), Form(...))
    # `ruff format` owns line length for code; the remaining E501 hits are all
    # long prompt/HTML string literals that can't be wrapped without changing
    # their content, so we don't enforce E501 on top of the formatter.
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]  # "useless expression" — intentional in assertions
